--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
     "jquery": "^3.2.1"
   }
 }
